<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/scannerFragment"
        android:icon="@drawable/ic_scanner"
        android:title="@string/nav_scan" />

    <item
        android:id="@+id/converterFragment"
        android:icon="@drawable/ic_convert"
        android:title="@string/nav_convert" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_star"
        android:title="@string/favorites" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

</menu>
