<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_check"
        android:title="@string/save"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save_as"
        android:title="@string/save_as"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_pdf"
        android:title="@string/export_to_pdf"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:iconTint="@color/white"
        app:showAsAction="never" />

</menu>
