<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_document"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_convert"
        android:icon="@drawable/ic_convert"
        android:title="@string/convert"
        app:iconTint="@color/white"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_text"
        android:title="@string/copy_text"
        app:iconTint="@color/white"
        app:showAsAction="never" />

</menu>
